# openvehicle-api

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  README.md  azure-pipelines.yml  conan_tools.txt  conanbuild.yml  conanfile_mingw.py  conanfile_unix.py  cppcheck.cmake  cross-compile-tools.cmake  doxygen.config  open_points_framework.txt  refresh_git_branch_list.cmd
examples/_howto_examples/: CMakeLists.txt  example_config_file.cfg  example_config_file_parsing.cfg
examples/auto_headlamp_example/: CMakeLists.txt  datalink_autoheadlight_example.dbc  vss_autoheadlight_example.csv
examples/configuration_example/: CMakeLists.txt
examples/door_demo_example/: CMakeLists.txt  datalink_2doors_example.dbc  datalink_4doors_example.dbc  door_example_receiver.asc  vss_doors_example.csv
examples/open_trunk_example/: CMakeLists.txt  open_trunk_example.dbc  open_trunk_receiver.asc  vss_open_trunk_example.csv
examples/system_demo_example/: CMakeLists.txt  datalink_demo_example.dbc  system_demo_receiver.asc  vss_demo_example.csv
examples/tasktimer_component_example/: CMakeLists.txt
examples/tasktimer_example/: CMakeLists.txt
examples/vehicle_abstraction_example/: CMakeLists.txt  vehicle_abstraction_example.csv  vehicle_abstraction_example.dbc  vehicle_abstraction_example_ms.csv  vehicle_abstraction_example_receiver_kmh.asc  vehicle_abstraction_example_receiver_ms.asc
framework_tests/dbc_util/: CMakeLists.txt  example_can.dbc
framework_tests/test_vss/: CMakeLists.txt  load_components_test.cpp
framework_tests/test_vss_formula/: CMakeLists.txt  load_components_test.cpp
framework_tests/vss_util/: CMakeLists.txt  vss_all_types.csv  vss_multiple_names.csv  vss_unique_names.csv  vss_unique_names_fail.csv  vss_with_formula.csv
sdv_executables/: CMakeLists.txt  error_msg.h
sdv_executables/sdv_control/: CMakeLists.txt  context.h  installation.cpp  installation.h  list_elements.cpp  list_elements.h  main.cpp  print_table.h  start_stop_service.cpp  start_stop_service.h  startup_shutdown.cpp  startup_shutdown.h
sdv_executables/sdv_core/: CMakeLists.txt  main.cpp
sdv_executables/sdv_dbc_util/: CMakeLists.txt  can_dl.cpp  can_dl.h  cmake_generator.cpp  cmake_generator.h  codegen_base.cpp  codegen_base.h  fmu.cpp  fmu.h  fmu_fmi_templates.h  fmu_templates.h  main.cpp
sdv_executables/sdv_idl_compiler/: CMakeLists.txt  codepos.cpp  codepos.h  constvariant.cpp  constvariant.h  constvariant.inl  core_idl_backup.h  environment.cpp  environment.h  exception.cpp  exception.h  includes.h  lexer.cpp  lexer.h  lexerbase.h  logger.cpp  logger.h  macro.cpp  macro.h  main.cpp  parsecontext.cpp  parsecontext.h  parser.cpp  parser.h  preproc.cpp  preproc.h  source.cpp  source.h  support.h  token.cpp  token.h  tokenlist.cpp  tokenlist.h
sdv_executables/sdv_iso/: CMakeLists.txt  main.cpp
sdv_executables/sdv_local_shutdown/: CMakeLists.txt  main.cpp
sdv_executables/sdv_packager/: CMakeLists.txt  core_control.cpp  core_control.h  environment.cpp  environment.h  main.cpp  packager.cpp  packager.h
sdv_executables/sdv_trace_mon/: CMakeLists.txt  main.cpp
sdv_executables/sdv_vss_util/: CMakeLists.txt  codegen_base.cpp  codegen_base.h  csv_file_reader.cpp  csv_file_reader.h  main.cpp  vss_bs_codingrx.cpp  vss_bs_codingrx.h  vss_bs_codingtx.cpp  vss_bs_codingtx.h  vss_bs_generator.cpp  vss_bs_generator.h  vss_coding.cpp  vss_coding.h  vss_helper.cpp  vss_helper.h  vss_rx_templates.h  vss_tx_templates.h  vss_vd_codingrx.cpp  vss_vd_codingrx.h  vss_vd_codingtx.cpp  vss_vd_codingtx.h  vss_vd_generator.cpp  vss_vd_generator.h
sdv_services/: CMakeLists.txt
sdv_services/can_communication_silkit/: CMakeLists.txt  can_com_silkit.cpp  can_com_silkit.h
sdv_services/can_communication_sim/: CMakeLists.txt  can_com_sim.cpp  can_com_sim.h
sdv_services/can_communication_socket_can/: CMakeLists.txt  can_com_sockets.cpp  can_com_sockets.h
sdv_services/core/: CMakeLists.txt  app_config.cpp  app_config.h  app_config_file.cpp  app_config_file.h  app_control.cpp  app_control.h  app_settings.cpp  app_settings.h  installation_composer.cpp  installation_composer.h  installation_manifest.cpp  installation_manifest.h  iso_monitor.cpp  iso_monitor.h  local_shutdown_request.h  log_csv_writer.cpp  log_csv_writer.h  logger.cpp  logger.h  logger_control.cpp  logger_control.h  memory.cpp  memory.h  module.cpp  module.h  module_control.cpp  module_control.h  object_lifetime_control.cpp  object_lifetime_control.h  repository.cpp  repository.h  sdv_core.cpp  sdv_core.h  toml_parser_util.h
sdv_services/data_dispatch_service/: CMakeLists.txt  dispatchservice.cpp  dispatchservice.h  signal.cpp  signal.h  transaction.cpp  transaction.h  trigger.cpp  trigger.h
sdv_services/hardware_ident/: CMakeLists.txt  hardware_ident.cpp  hardware_ident.h
sdv_services/ipc_com/: CMakeLists.txt  com_channel.cpp  com_channel.h  com_ctrl.cpp  com_ctrl.h  marshall_object.cpp  marshall_object.h
sdv_services/ipc_connect/: CMakeLists.txt  client.cpp  client.h  listener.cpp  listener.h
sdv_services/ipc_shared_mem/: CMakeLists.txt  channel_mgnt.cpp  channel_mgnt.h  connection.cpp  connection.h  in_process_mem_buffer.h  mem_buffer_accessor.cpp  mem_buffer_accessor.h  shared_mem_buffer_posix.h  shared_mem_buffer_windows.h  watchdog.cpp  watchdog.h
sdv_services/ipc_sockets/: CMakeLists.txt  channel_mgnt.cpp  channel_mgnt.h  connection.cpp  connection.h
sdv_services/manifest_util/: CMakeLists.txt  manifest_util.cpp  manifest_util.h
sdv_services/process_control/: CMakeLists.txt  process_control.cpp  process_control.h
sdv_services/proxy_stub/: CMakeLists.txt
sdv_services/task_timer/: CMakeLists.txt  simulationtasktimer.cpp  simulationtasktimer.h  tasktimer.cpp  tasktimer.h
sdv_services/uds_unix_sockets/: CMakeLists.txt  channel_mgnt.cpp  channel_mgnt.h  (+2 more)
tests/: CMakeLists.txt  README.md  loop_test_runner_linux.sh  loop_test_runner_windows.ps1  run_tests_on_linux.sh  run_tests_on_windows.ps1  sdv_core_reloc.toml
tmp_project/: CMakeLists.txt  CMakePresets.json
(+693 files in other folders)
